--- a/ios/Dongi/SplashScreen.storyboard
+++ b/ios/Dongi/SplashScreen.storyboard
@@ -26,6 +26,7 @@
                             <constraint firstItem="EXPO-SplashScreen" firstAttribute="centerY" secondItem="EXPO-ContainerView" secondAttribute="centerY" id="1a145271b085b6ce89b1405a310f5b1bb7656595"/>
                         </constraints>
                         <color key="backgroundColor" name="SplashScreenBackground"/>
+                        <color key="backgroundColor" name="SplashScreenBackground"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXPO-PLACEHOLDER-1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -35,6 +36,9 @@
     </scenes>
     <resources>
         <image name="SplashScreenLogo" width="159" height="159"/>
+        <namedColor name="SplashScreenBackground">
+            <color alpha="1.000" blue="0.545098039215686" green="0.396078431372549" red="0.0941176470588235" customColorSpace="sRGB" colorSpace="custom"/>
+        </namedColor>
         <namedColor name="SplashScreenBackground">
             <color alpha="1.000" blue="0.545098039215686" green="0.396078431372549" red="0.0941176470588235" customColorSpace="sRGB" colorSpace="custom"/>
         </namedColor>
